Fixed countdown not displaying right on small screen.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,7 +143,7 @@ button {
   overflow: hidden;
 
   display: grid;
-  grid-template-columns: 60px 65fr 35fr;
+  grid-template-columns: 60px 6fr 3fr;
   grid-template-rows: 60px 30px;
 
   z-index: 10;
@@ -157,6 +157,7 @@ button {
 }
 
 .upcoming-header--left {
+  overflow: hidden;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
 }
@@ -205,7 +206,7 @@ button {
   grid-row: 1 / 2;
 }
 
-.upcoming-header__date > .upcoming-header__text {
+.upcoming-header__text--date {
   margin: 5px 0 0 0;
   font-size: 12px;
   font-weight: 100;
@@ -226,7 +227,7 @@ button {
 .upcoming-header__text--countdown {
   margin: 7px 0 0 0;
 
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 100;
   text-align: center;
   letter-spacing: 6px;
@@ -901,9 +902,9 @@ footer {
     font-size: 16px;
   }
 
-  .upcoming-header__timer > .upcoming-header__text {
+  .upcoming-header__text--countdown {
     margin: 12px 0 0 0;
-    font-size: 18px;
+    font-size: 17px;
   }
 
   .upcoming-component__mission--no-mission {
